# my-waifu-loves-me

./: .env  .pre-commit-config.yaml  README.md  compose.override.yml  compose.traefik.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  openapi.json  prometheus.yml
backend/: pyproject.toml
backend/app/: api.py  api_router.py  config.py  crud.py  database.py  deps.py  initial_data.py  main.py  schemas.py  utilities.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2025_10_04_0902-bba9c968c9e4_added_file.py  2025_10_04_1153-4206c99bc378_added_user_file.py  2025_10_04_1219-c49887556182_add_searchfile_table.py  2026_04_01_0816-2ec877205bf1_initial_database.py
backend/app/api/: deps.py
backend/app/auth/: dependencies.py  router.py  security.py  service.py
backend/app/core/: db.py
backend/app/items/: models.py  router.py  schemas.py
backend/app/login/: router.py  service.py
backend/app/media/: graphql_media_schema.py  graphql_schema.py  graphql_search_schema.py  graphql_user_schema.py  models.py  queries.py  router.py
backend/app/private/: router.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/utils/: item.py  user.py
backend/app/users/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/utils/: copy_params.py  router.py  tz_datetime.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/routes/: test_items.py  test_login.py  test_users.py
backend/tests/auth/: test_router.py
backend/tests/crud/: test_user.py
backend/tests/items/: test_router.py  utils.py
backend/tests/media/: test_router.py
backend/tests/private/: test_router.py
backend/tests/users/: test_router.py  test_service.py
backend/tests/utils/: item.py  user.py  utils.py
frontend/: .env  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: generate-client-alt.sh  set_ports.py  (+1 more)
(+79 files in other folders)
